pull calendar modal to z-index 9000, calendar itself is at z-index 4.  add modal formatting/styles.  fix update and delete logic so that other users can't modify events that are not theirs.  add modal to profile page.  update profile modal has information prefilled to that of the user's current profile data.

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,13 @@
   padding-top: 50px;
 }
 
+.ReactModal__Overlay {
+  z-index: 9000;
+  overflow: scroll;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Work Sans', sans-serif;
+}
+
 .modalContent {
   display: flex;
 }
